tests/baselines/reference/operatorAddNullUndefined.errors.txt
tests/cases/compiler/operatorAddNullUndefined.ts(2,10): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(2,17): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(3,10): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(3,17): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(4,10): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(4,22): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(5,10): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(5,22): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(6,14): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(7,14): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(8,10): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(9,10): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(14,11): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(15,11): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/operatorAddNullUndefined.ts(16,17): error TS2531: Object is possibly 'null'.
tests/cases/compiler/operatorAddNullUndefined.ts(17,17): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/operatorAddNullUndefined.ts (16 errors) ====
    enum E { x }
    var x1 = null + null;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x2 = null + undefined;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var x3 = undefined + null;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                         ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x4 = undefined + undefined;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                         ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var x5 = 1 + null;
                 ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x6 = 1 + undefined;
                 ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var x7 = null + 1;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x8 = undefined + 1;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var x9 = "test" + null;
    var x10 = "test" + undefined;
    var x11 = null + "test";
    var x12 = undefined + "test";
    var x13 = null + E.x
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x14 = undefined + E.x
              ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var x15 = E.x + null
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var x16 = E.x + undefined
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.